--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -2503,6 +2503,9 @@ marquee > h2 {
    .w3-section{
      margin-left: 230px;
    }
+   .spks .prevspons{
+     margin-left: 8%;
+   }
     }
 
 .product-img {
