--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -2948,7 +2948,7 @@ span {
 
 .dodabba{
 width: auto;
-height: 46.813rem;
+height: 43.813rem;
 display: flex;
 flex-direction: row;
 margin-top: 70px;
@@ -2970,12 +2970,12 @@ margin-top: 70px;
  width: 9.625rem;
  height: 6rem;
  left: 5rem;
- top: 9.134rem;
+ top: 9.5rem;
 
  /* font-family: "icomoon"; */
  font-style: normal;
  font-weight: bold;
- font-size: 5rem;
+ font-size: 5.2rem;
  line-height: 6rem;
  /* identical to box height */
  color: #FFFFFF;
@@ -2987,7 +2987,7 @@ margin-top: 70px;
 width: 30.625rem;
 /* height: 6.25rem; */
 left: 5rem;
-top: 16.41rem;
+top: 18rem;
 
 /* font-family: "icomoon"; */
 font-style: normal;
@@ -3006,12 +3006,12 @@ color: #FFFFFF;
  width: 35%;
  /* height: 2.875rem; */
  left: 5rem;
- top: 26.583rem;
+ top: 30rem;
 
  /* font-family: "icomoon"; */
  font-style: normal;
  font-weight: normal;
- font-size: 1.5rem;
+ font-size: 2rem;
  line-height: 129.5%;
  /* or 23px */
 
@@ -3137,7 +3137,7 @@ tr{
    display: flex;
    align-items: center;
    position: absolute;
-   /* width: 35%; */
+   width: 80%;
    height: 2.875rem;
    left: 5rem;
    top: 16.583rem;
@@ -3203,7 +3203,7 @@ border-radius: 4px;
  }
  .dabbaek{
    margin-top: 70px;
-   min-height: 380px;
+   min-height: 330px;
  }
  .dabbado{
    top: 700px;
@@ -3230,7 +3230,7 @@ border-radius: 4px;
      width: 69%;
      height: 6.25rem;
      left: 3rem;
-     top: 11rem;
+     top: 12rem;
      /* font-family: "icomoon"; */
      font-style: normal;
      font-weight: 500;
@@ -3245,11 +3245,11 @@ border-radius: 4px;
      width: 75%;
      height: 2.875rem;
      left: 3rem;
-     top: 18rem;
+     top: 20rem;
      /* font-family: "icomoon"; */
      font-style: normal;
      font-weight: normal;
-     font-size: 0.9rem;
+     font-size: 1.2rem;
      line-height: 129.5%;
      color: #FFFFFF;
  }
